# Qt-sql

./: .gitignore  CMakeLists.txt  MyWidget.cpp  MyWidget.h  README.md  data.sql  gitignore  main.cpp  opencv.cpp  opencv.h  sql.cpp  sql.h  sqldialog.cpp  sqldialog.h  yolo.cpp  yolo.h
demo-Debug/: qtcsettings.cmake
demo-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  test.db
demo-Release/.cmake/api/v1/reply/: cache-v2-6a39d8ffa88d141b22a7.json  codemodel-v2-525f2c858fe4a65bef1a.json  codemodel-v2-cc6192e15af8cde20803.json  index-2022-06-14T17-41-02-0419.json  target-demo-Release-fed1259b78d539ab21df.json
demo-Release/.cmake/api/v1/reply.prev/: cmakeFiles-v1-d7d1c075ec89baf0ac5d.json  codemodel-v2-5ca99e76ddd474ff3a57.json  index-2022-06-14T17-30-00-0033.json  index-2022-06-14T17-40-10-0627.json  target-demo-Release-292ece74687a98adc070.json  target-demo-Release-fba52c6c0bee5b40a742.json  target-demo_autogen-Release-616653f66fcaf3ea0522.json  target-demo_autogen_timestamp_deps-Release-bc87b3632d4a14628402.json
demo-Release/.qtc_clangd/: compile_commands.json
demo-Release/.qtc_clangd/.cache/clangd/index/: MyWidget.cpp.FD2D4B433A60A14D.idx  MyWidget.h.99BEC8E40FFEF766.idx  QApplication.4C5E1D183793A904.idx  QLineEdit.C47FFD6A2C60CEB3.idx  QPushButton.C2EE82B691BC5F4E.idx  QSqlDatabase.63157BC750D6FD96.idx  QSqlError.6DFFB03C07B70499.idx  QSqlQuery.F5453713DC918B9E.idx  QString.CD7FF255B4B7F781.idx  QTextEdit.B589EF4951938504.idx  QVariant.5BE408C316DE7053.idx  QWidget.5922ABC5958272CD.idx  __stddef_max_align_t.h.17C90EC460B3A91A.idx  adxintrin.h.12F17A681DDFB5A9.idx  algorithm.7EF3EA740C54FBBB.idx  base.hpp.76295E4D8C0BCD64.idx  bmiintrin.h.08E4EBB27DEDBFF0.idx  bufferpool.hpp.01BF22259A19071F.idx  cfloat.7DD03419AF24A1BB.idx  check.hpp.8CE6D0271D8B6D14.idx  climits.2AB8AC5133ECB203.idx  complex.4D37BA57F8237210.idx  core.hpp.0BC99CD06DC5B54C.idx  core.hpp.856885E1A17510FF.idx  corecrt_search.h.06BC79B90945C894.idx  cstddef.33F4CD18EB56D0D2.idx  cstdint.D1DF9E270FD83E76.idx  cv_cpu_dispatch.h.9E3B51787FE20EEB.idx  cvdef.h.99AB13CA8D81923E.idx  (+203 more)
demo-Release/demo_autogen/: deps  mocs_compilation.cpp
demo-Release/demo_autogen/EWIEGA46WW/: moc_MyWidget.cpp  moc_MyWidget.cpp.d  moc_widget.cpp  moc_widget.cpp.d
